--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pytorch>=1.7.1
-torchvision
+# pytorch>=1.7.1
+# torchvision
 opencv-python
 transforms3d
 numpy
@@ -7,8 +7,8 @@ plyfile
 scikit-image
 matplotlib
 open3d
-pytorch3d
+# pytorch3d
 pyyaml
-cudatoolkit
+# cudatoolkit
 tensorboardX
 tqdm
